--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>DOG IMAGE GALLERY</h1>
         
-        <label for="breed-select">Breed Names:</label>
+        <label for="breed-select">Breed:</label>
         <select id="breed-select">
             <option value="">Select a breed</option>
         </select>
